test/lastuse5_1.slq
// args: --run

def main(){
	x:=H(0:ğ”¹);
	def foo():ğ”¹â‡’x;
	return (foo,x,foo); /// error
}

